# rebuild

./: .mcpd.toml  LICENSE  README.md  pyproject.toml  sample_doc.txt
agent/: main.py
tools/doc-parser/: server.py
tools/doc_parser/: server.py
tools/ner-detector/: server.py
tools/ner_detector/: server.py
tools/redactor/: server.py
