[project]
name = "mozilla-redactor"
version = "0.1.0"
description = "Smart PII Redaction Agent"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "mcpd>=0.1.0",
    "mozilla-ai-tinyagent>=0.1.0",
    "mcp>=1.0.0",
    "PyPDF2>=3.0.0",
    "openai>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools"]
